<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemoteExample</string>
    <string name="status_request">status_request</string>
    <string name="action_settings">Settings</string>
    <string name="permission_description">Allows another app to control VPN</string>
    <string name="no_status_yet">no_status_yet</string>
    <string name="init_config">init_config</string>
    <string name="load_cert">load_cert</string>
    <string name="startZDVPN">startZDVPN</string>
    <string name="stopZDVPN">stopZDVPN</string>
    <string name="server_ip">server_ip:</string>
    <string name="server_port">server_port:</string>
    <string name="server_strategy_port">server_strategy_port:</string>
</resources>
