<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/status_request"
            android:layout_alignParentTop="true"
            android:text="@string/no_status_yet" />

        <TextView
            android:id="@+id/status_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/status"
            android:text="@string/status_request" />

        <TextView
            android:id="@+id/server_ip_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/status_request"
            android:text="@string/server_ip" />

        <EditText
            android:id="@+id/server_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/server_ip_textView"
            android:text="17.0.100.2" />

        <TextView
            android:id="@+id/server_port_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/server_ip"
            android:text="@string/server_port" />

        <EditText
            android:id="@+id/server_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/server_port_textView"
            android:text="1194" />

        <TextView
            android:id="@+id/server_strategy_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/server_port"
            android:text="@string/server_strategy_port" />

        <EditText
            android:id="@+id/server_strategy_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/server_strategy_textView"
            android:text="80" />

        <Button
            android:id="@+id/init"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/server_strategy_port"
            android:text="@string/init_config"
            android:visibility="visible" />

        <Button
            android:id="@+id/loadCert"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/init"
            android:text="@string/load_cert"
            android:visibility="visible" />

        <Button
            android:id="@+id/startZDVPN"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/loadCert"
            android:text="@string/startZDVPN" />

        <Button
            android:id="@+id/stopZDVPN"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/startZDVPN"
            android:text="@string/stopZDVPN" />

    </LinearLayout>
</ScrollView>